Fixed right buttons wrap for mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -282,6 +282,7 @@
             .menu_button {
                 width: auto;
             }
+            flex-wrap: wrap;
         }
 
         .tab-button {
